<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2007 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
  
          http://www.apache.org/licenses/LICENSE-2.0
  
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<resources>
    <string name="app_name">记事本</string>
    <string name="live_folder_name">笔记</string>

    <string name="title_edit_title">笔记标题:</string>
    <string name="title_create">新笔记</string>
    <string name="title_edit">编辑: %1$s</string>
    <string name="title_notes_list">笔记</string>

    <string name="menu_edit_title">编辑标题</string>
    <string name="menu_add">新笔记</string>
    <string name="menu_save">保存</string>
    <string name="menu_delete">删除</string>
    <string name="menu_open">打开</string>
    <string name="menu_revert">还原更改</string>
    <string name="menu_copy">复制</string>
    <string name="menu_paste">粘贴</string>
    <string name="menu_search">搜索</string>

    <string name="button_ok">好</string>
    <string name="text_title">标题:</string>

    <string name="resolve_edit">编辑笔记</string>
    <string name="resolve_title">编辑标题</string>

    <string name="error_title">错误</string>
    <string name="error_message">加载笔记出现错误</string>
    <string name="nothing_to_save">无可保存内容</string>
    <string name="hint_title">标题</string>
    <!-- 笔记分类相关 -->
    <string name="menu_set_category">设置分类</string>
    <string name="category_work">工作</string>
    <string name="category_study">学习</string>
    <string name="category_life">生活</string>
    <string name="category_other">其他</string>

    <!-- 分类选择列表 -->
    <string-array name="note_categories">
        <item>@string/category_work</item>
        <item>@string/category_study</item>
        <item>@string/category_life</item>
        <item>@string/category_other</item>
    </string-array>
    <!-- 菜单：按分类查看 -->
    <string name="menu_filter_category">按分类查看</string>
    <string name="category_all">全部</string>

    <!-- 分类筛选用的列表：多一个“全部” -->
    <string-array name="note_categories_filter">
        <item>@string/category_all</item>
        <item>@string/category_work</item>
        <item>@string/category_study</item>
        <item>@string/category_life</item>
        <item>@string/category_other</item>
    </string-array>

    <!-- 待办功能相关 -->
    <string name="menu_show_all">全部笔记</string>
    <string name="menu_show_todo">仅看待办</string>
    <string name="menu_show_done">仅看已完成</string>

    <string name="menu_set_todo">设为待办事项</string>
    <string name="menu_unset_todo">取消待办</string>
    <string name="menu_mark_done">标记为已完成</string>
    <string name="menu_mark_undone">标记为未完成</string>
</resources>