<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- 新建笔记 -->
    <item
        android:id="@+id/menu_add"
        android:icon="@drawable/ic_menu_compose"
        android:title="@string/menu_add"
        android:showAsAction="always" />

    <!-- 按分类查看 -->
    <item
        android:id="@+id/menu_filter_category"
        android:title="@string/menu_filter_category"
        android:icon="@android:drawable/ic_menu_sort_by_size"
        android:showAsAction="never" />

    <!-- 待办筛选 -->
    <item
        android:id="@+id/menu_show_all"
        android:title="@string/menu_show_all"
        android:showAsAction="never" />

    <item
        android:id="@+id/menu_show_todo"
        android:title="@string/menu_show_todo"
        android:showAsAction="never" />

    <item
        android:id="@+id/menu_show_done"
        android:title="@string/menu_show_done"
        android:showAsAction="never" />

    <!-- 搜索 -->
    <item
        android:id="@+id/menu_search"
        android:title="@string/menu_search"
        android:icon="@android:drawable/ic_menu_search"
        android:actionViewClass="android.widget.SearchView"
        android:showAsAction="ifRoom|collapseActionView" />

    <!-- 粘贴 -->
    <item
        android:id="@+id/menu_paste"
        android:title="@string/menu_paste"
        android:icon="@android:drawable/ic_menu_set_as"
        android:showAsAction="never" />

</menu>